--- a/charts/chat-ui/Chart.yaml
+++ b/charts/chat-ui/Chart.yaml
@@ -3,7 +3,7 @@ apiVersion: v2
 name: chat-ui
 description: A description
 version: 0.0.2
-appVersion: v0.0.1
+appVersion: v0.0.2
 type: application
 
 keywords:
@@ -14,21 +14,21 @@ keywords:
 
 dependencies:
   - name: open-webui
-    version: 0.0.2
+    version: "*"
     repository: https://helm.openwebui.com
     alias: owu
     condition: owu.enabled
 
   - name: common
-    version: 0.0.2
+    version: "*"
     repository: https://charts.bitnami.com/bitnami
-    
+
   - condition: tika.enabled
     name: tika
     repository: https://apache.jfrog.io/artifactory/tika
-    version: 0.0.2
-    
+    version: "*"
+
   - name: chromadb
-    version: 0.0.2
+    version: "*"
     condition: tika.enabled
     repository: https://amikos-tech.github.io/chromadb-chart/
