--- a/charts/chat-ui/Chart.yaml
+++ b/charts/chat-ui/Chart.yaml
@@ -14,21 +14,21 @@ keywords:
 
 dependencies:
   - name: open-webui
-    version: "*"
+    version: '*'
     repository: https://helm.openwebui.com
     alias: owu
     condition: owu.enabled
 
   - name: common
-    version: "*"
+    version: '*'
     repository: https://charts.bitnami.com/bitnami
-
+    
   - condition: tika.enabled
     name: tika
     repository: https://apache.jfrog.io/artifactory/tika
-    version: "*"
-
+    version: '*'
+    
   - name: chromadb
-    version: "*"
+    version: '*'
     condition: tika.enabled
     repository: https://amikos-tech.github.io/chromadb-chart/
