docs: Document LMCache Infrastructure Requirements

--- a/charts/lmcache-kserve-inference/templates/inferenceservice.yaml
+++ b/charts/lmcache-kserve-inference/templates/inferenceservice.yaml
@@ -22,4 +22,4 @@ spec:
       modelFormat:
         name: "vllm" # Specify the serving runtime
       storageUri: {{ .Values.inferenceService.model.storageUri | quote }}
-      protocol: "openai_v1"
+      protocolVersion: "v1"
