--- a/charts/lmcache/Chart.yaml
+++ b/charts/lmcache/Chart.yaml
@@ -2,6 +2,7 @@ apiVersion: v2
 
 name: lmcache
 description: A Helm chart to deploy LMCache - a high-performance KV cache management system for LLMs.
+icon: https://avatars.githubusercontent.com/u/162335353?s=200&v=4
 version: 0.1.0
 appVersion: "0.3.6"
 type: application
