ref: use bjw to have a clearer code

--- a/charts/lmcache/Chart.yaml
+++ b/charts/lmcache/Chart.yaml
@@ -3,7 +3,7 @@ apiVersion: v2
 name: lmcache
 description: A Helm chart to deploy LMCache - a high-performance KV cache management system for LLMs.
 icon: https://avatars.githubusercontent.com/u/162335353?s=200&v=4
-version: 0.1.1
+version: 0.1.0
 appVersion: "0.3.6"
 type: application
 
@@ -14,3 +14,8 @@ keywords:
   - ml
   - ai
   - cache
+
+dependencies:
+  - name: app-template
+    version: "3.2.1"
+    repository: "https://bjw-s-labs.github.io/helm-charts"
