--- a/charts/lmcache/values.yaml
+++ b/charts/lmcache/values.yaml
@@ -1,113 +1,104 @@
 global:
-  version: "0.1.0"
-  labels:
-    app: lmcache
-    team: adorsys-gis
+  nameOverride: ""
 
-deployment:
-  name: "lmcache"
-  replicaCount: 1
-  image:
-    repository: "lmcache/vllm-openai"
-    tag: "2025-03-10"
-    pullPolicy: IfNotPresent
-  
-  resources:
-    requests:
-      memory: "4Gi"
-      cpu: "2000m"
-      nvidia.com/gpu: "1"
-    limits:
-      memory: "8Gi"
-      cpu: "4000m"
-      nvidia.com/gpu: "1"
-  
-  # Health checks
-  livenessProbe:
-    enabled: true
-    path: "/health"
-    initialDelaySeconds: 30
-    periodSeconds: 10
-    timeoutSeconds: 5
-    failureThreshold: 3
-  
-  readinessProbe:
-    enabled: true
-    path: "/health"
-    initialDelaySeconds: 5
-    periodSeconds: 5
-    timeoutSeconds: 3
-    failureThreshold: 3
-  
-  # Additional environment variables
-  extraEnv: {}
-  
-  # Volume mounts for persistent storage
-  volumeMounts: []
-  
-  # Volumes
-  volumes: []
-  
-  # Node selection
-  nodeSelector: {}
-  
-  # Tolerations for node taints
-  tolerations: []
-  
-  # Pod affinity/anti-affinity
-  affinity: {}
+controllers:
+  main:
+    replicas: 1
 
-# LMCache specific configuration
-lmcache:
-  chunkSize: "256"
-  localCpu: "True"
-  localDisk: ""  # Set to "file:///path/to/cache" to enable
-  maxLocalDiskSize: "0.0"  # GB, set > 0 to enable disk caching
-  remoteUrl: ""  # Set to "protocol://host:port" to enable
-  enableP2P: "False"
-  lookupUrl: ""  # Required if enableP2P is True
-  distributedUrl: ""  # Required if enableP2P is True
 
-# Service configuration
+    containers:
+      main:
+        image:
+          repository: "lmcache/vllm-openai"
+          tag: "2025-03-10"
+          pullPolicy: IfNotPresent
+
+        env:
+          LMCACHE_CHUNK_SIZE: "256"
+          LMCACHE_LOCAL_CPU: "True"
+          LMCACHE_LOCAL_DISK: ""
+          LMCACHE_MAX_LOCAL_DISK_SIZE: "0.0"
+          LMCACHE_REMOTE_URL: ""
+          LMCACHE_ENABLE_P2P: "False"
+          LMCACHE_LOOKUP_URL: ""
+          LMCACHE_DISTRIBUTED_URL: ""
+
+        probes:
+          liveness:
+            enabled: true
+            spec:
+              httpGet:
+                path: "/health"
+                port: 8000
+              initialDelaySeconds: 30
+              periodSeconds: 10
+              timeoutSeconds: 5
+              failureThreshold: 3
+          readiness:
+            enabled: true
+            spec:
+              httpGet:
+                path: "/health"
+                port: 8000
+              initialDelaySeconds: 5
+              periodSeconds: 5
+              timeoutSeconds: 3
+              failureThreshold: 3
+
+        resources:
+          requests:
+            memory: "4Gi"
+            cpu: "2000m"
+            nvidia.com/gpu: "1"
+          limits:
+            memory: "8Gi"
+            cpu: "4000m"
+            nvidia.com/gpu: "1"
+
 service:
-  type: ClusterIP
-  port: 80
-  targetPort: 8000
-  annotations: {}
+  main:
+    controller: main
+    ports:
+      http:
+        port: 80
+        targetPort: 8000
 
-# Ingress configuration
-ingress:
-  enabled: false
-  annotations: {}
-  hosts:
-    - host: lmcache.example.com
-      paths:
-        - path: /
-          pathType: Prefix
-  tls:
-    - secretName: lmcache-example-com-secret
-      hosts:
-        - lmcache.example.com
-
-# HTTPRoute configuration (for Gateway API)
-httpRoute:
-  enabled: false
-
-# Service Account
 serviceAccount:
   create: false
   name: ""
 
-# Pod Security Context
-podSecurityContext: {}
+ingress:
+  main:
+    enabled: false
+    className: alb
+    annotations:
+      alb.ingress.kubernetes.io/tags: Environment=dev,Owner=adorsys-gis
+      alb.ingress.kubernetes.io/load-balancer-name: lmcache-adorsys-gis
+      alb.ingress.kubernetes.io/listen-ports: |
+        [
+          {
+            "HTTP":80
+          },
+          {
+            "HTTPS": 443
+          }
+        ]
+      alb.ingress.kubernetes.io/ssl-redirect: "443"
+      alb.ingress.kubernetes.io/scheme: "internet-facing"
+      alb.ingress.kubernetes.io/target-type: "ip"
+      alb.ingress.kubernetes.io/certificate-arn: "arn:aws:acm:eu-central-1:571075516563:certificate/980a6ebb-a87e-4cfb-b8bf-3d0e5da5acf5"
+      external-dns.alpha.kubernetes.io/hostname: "cache.ai.kivoyo.com"
+      alb.ingress.kubernetes.io/healthcheck-interval-seconds: "15"
+      alb.ingress.kubernetes.io/healthcheck-timeout-seconds: "5"
+      alb.ingress.kubernetes.io/healthy-threshold-count: "2"
+      alb.ingress.kubernetes.io/unhealthy-threshold-count: "2"
+    hosts:
+      - host: cache.ai.kivoyo.com
+        paths:
+          - path: /
+            pathType: Prefix
+    tls:
+      - secretName: cache-ai-kivoyo-com-secret
+        hosts:
+          - cache.ai.kivoyo.com
 
-# Security Context
-securityContext: {}
-
-# Autoscaling
-autoscaling:
-  enabled: false
-  minReplicas: 1
-  maxReplicas: 10
-  targetCPUUtilizationPercentage: 80
-  targetMemoryUtilizationPercentage: 80
