--- a/charts/lmcache/templates/deployment.yaml
+++ b/charts/lmcache/templates/deployment.yaml
@@ -1,14 +1,1 @@
----
-{{- include "bjw-s.common.loader.init" . }}
-
-{{- define "app-template.hardcodedValues" -}}
-# Set the nameOverride based on the release name if no override has been set
-{{ if not .Values.global.nameOverride }}
-global:
-  nameOverride: "{{ .Release.Name }}"
-{{ end }}
-{{- end -}}
-{{- $_ := mergeOverwrite .Values (include "app-template.hardcodedValues" . | fromYaml) -}}
-
-{{/* Render the templates */}}
-{{ include "bjw-s.common.loader.generate" . }}
+{{- include "bjw-s.common.loader.all" (dict "Values" (.Values | toYaml | fromYaml) "Chart" .Chart "Release" .Release "Capabilities" .Capabilities) -}}
