update: optimise module

--- a/charts/lmcache/Chart.yaml
+++ b/charts/lmcache/Chart.yaml
@@ -1,12 +1,8 @@
 apiVersion: v2
-
 name: lmcache
-description: A Helm chart to deploy LMCache - a high-performance KV cache management system for LLMs.
-icon: https://avatars.githubusercontent.com/u/162335353?s=200&v=4
+description: A Helm chart for deploying LMCache.
 version: 0.1.0
 appVersion: "0.3.6"
-type: application
-
 keywords:
   - lmcache
   - kv-cache
@@ -14,7 +10,13 @@ keywords:
   - ml
   - ai
   - cache
-
+home: https://github.com/adorsys/ai-helm/tree/main/charts/lmcache
+sources:
+  - https://github.com/lm-cache/lm-cache
+maintainers:
+  - name: adorsys
+    email: info@adorsys.de
+icon: https://avatars.githubusercontent.com/u/162335353?s=200&v=4
 dependencies:
   - name: app-template
     version: "4.3.0"
