--- a/charts/lmcache/Chart.yaml
+++ b/charts/lmcache/Chart.yaml
@@ -20,7 +20,7 @@ kubeVersion: '>=1.28.0-0'
 maintainers:
 - email: me@bjw-s.dev
   name: bjw-s
-name: app-template
+name: lmcache
 sources:
 - https://github.com/bjw-s-labs/helm-charts
 version: 4.3.0
