--- a/charts/lmcache/Chart.yaml
+++ b/charts/lmcache/Chart.yaml
@@ -18,8 +18,8 @@ description: A common powered chart template. This can be useful for small proje
 icon: https://raw.githubusercontent.com/helm/helm/main/docs/logos/helm-logo-color.png
 kubeVersion: '>=1.28.0-0'
 maintainers:
-- email: me@bjw-s.dev
-  name: bjw-s
+- email: abonghoderick@gmail.com
+  name: Kunga Derick Abongho
 name: lmcache
 sources:
 - https://github.com/bjw-s-labs/helm-charts
