--- a/charts/lmcache/Chart.yaml
+++ b/charts/lmcache/Chart.yaml
@@ -15,7 +15,7 @@ dependencies:
   version: 4.3.0
 description: A common powered chart template. This can be useful for small projects
   that don't have their own chart.
-icon: https://raw.githubusercontent.com/helm/helm/main/docs/logos/helm-logo-color.png
+icon: https://techicons.dev/icons/helm/helm-icon.png
 kubeVersion: '>=1.28.0-0'
 maintainers:
 - email: abonghoderick@gmail.com
