--- a/charts/lmcache/values.yaml
+++ b/charts/lmcache/values.yaml
@@ -1,6 +1,3 @@
-# Default values for lmcache.
-# This is a YAML-formatted file.
-# Declare variables to be passed into your templates.
 
 global:
   nameOverride: ""
@@ -8,29 +5,22 @@ global:
 
 controllers:
   main:
-    # -- Controller deployment strategy.
     strategy: RollingUpdate
 
-    # -- Annotations for the controller pods.
     annotations: {}
 
     containers:
       main:
-        # -- Container image repository.
         image:
           repository: "lmcache/vllm-openai"
-          # -- Container image tag.
           tag: "0.1.0" # Use semantic versioning for image tags (e.0.0)
-          # -- Container image pull policy.
           pullPolicy: IfNotPresent
 
-        # -- Environment variables for the container.
         env:
           LMCACHE_USE_EXPERIMENTAL: "True"
           LMCACHE_CONFIG_FILE: "/etc/lmcache/lmcache_config.yaml"
           LMCACHE_LOG_LEVEL: "info"
 
-        # -- Probes for the container.
         probes:
           liveness:
             enabled: true
@@ -53,8 +43,6 @@ controllers:
               timeoutSeconds: 3
               failureThreshold: 3
 
-        # -- Resource requests and limits for the container.
-        # We recommend adjusting these values based on your workload.
         resources:
           requests:
             memory: "4Gi"
@@ -72,19 +60,18 @@ podOptions:
     fsGroup: 1000
     fsGroupChangePolicy: "OnRootMismatch"
 
-# -- LMCache configuration.
 lmcache:
   enabled: true
   chunk_size: 256
   local:
     cpu:
-      size: 1024
+      size: 2048
     disk:
-      path: "/tmp/lmcache"
-      size: 1024
+      path: "/var/lib/lmcache"
+      size: 10240
   remote_url: "redis://{{ .Values.redis.host }}:{{ .Values.redis.port }}"
+  cache_strategy: "multi_tier"
 
-# -- Service configuration.
 service:
   main:
     controller: main
@@ -94,25 +81,37 @@ service:
         port: 80
         targetPort: 8000
 
-# -- Ingress configuration.
 ingress:
   main:
-    enabled: false
-    className: ""
-    annotations: {}
-      # kubernetes.io/ingress.class: nginx
-      # kubernetes.io/tls-acme: "true"
+    enabled: true
+    className: alb
+    annotations:
+      alb.ingress.kubernetes.io/tags: Environment=dev,Owner=adorsys-gis
+      alb.ingress.kubernetes.io/load-balancer-name: lmcache-adorsys-gis
+      alb.ingress.kubernetes.io/listen-ports: |
+        [
+          {
+            "HTTP":80
+          },
+          {
+            "HTTPS": 443
+          }
+        ]
+      alb.ingress.kubernetes.io/ssl-redirect: "443"
+      alb.ingress.kubernetes.io/scheme: "internet-facing"
+      alb.ingress.kubernetes.io/target-type: "ip"
+      alb.ingress.kubernetes.io/certificate-arn: "arn:aws:acm:eu-central-1:571075516563:certificate/980a6ebb-a87e-4cfb-b8bf-3d0e5da5acf5"
+      external-dns.alpha.kubernetes.io/hostname: "lmcache.ai.kivoyo.com"
+      alb.ingress.kubernetes.io/healthcheck-interval-seconds: "15"
+      alb.ingress.kubernetes.io/healthcheck-timeout-seconds: "5"
+      alb.ingress.kubernetes.io/healthy-threshold-count: "2"
+      alb.ingress.kubernetes.io/unhealthy-threshold-count: "2"
     hosts:
-      - host: chart-example.local
+      - host: lmcache.ai.kivoyo.com
         paths:
           - path: /
-            pathType: ImplementationSpecific
-    tls: []
-    #  - secretName: chart-example-tls
-    #    hosts:
-    #      - chart-example.local
+            pathType: Prefix
 
-# -- Persistence configuration.
 persistence:
   lmcache-config:
     type: configMap
@@ -121,6 +120,17 @@ persistence:
       main:
         main:
           - path: /etc/lmcache
+  lmcache-disk:
+    enabled: true
+    type: persistentVolumeClaim
+    storageClass: ai-ebs
+    accessMode: ReadWriteOnce
+    size: 50Gi
+    advancedMounts:
+      main:
+        main:
+          - path: /var/lib/lmcache
+            readOnly: false
 
 configMaps:
   lmcache-config:
@@ -129,6 +139,7 @@ configMaps:
       lmcache_config.yaml: |
         enabled: {{ .Values.lmcache.enabled }}
         chunk_size: {{ .Values.lmcache.chunk_size }}
+        cache_strategy: "{{ .Values.lmcache.cache_strategy }}"
         local:
           cpu:
             size: {{ .Values.lmcache.local.cpu.size }}
@@ -137,20 +148,15 @@ configMaps:
             size: {{ .Values.lmcache.local.disk.size }}
         remote_url: "{{ .Values.lmcache.remote_url }}"
 
-# -- Node selector configuration.
 nodeSelector: {}
 
-# -- Tolerations configuration.
 tolerations: []
 
-# -- Affinity configuration.
 affinity: {}
 
-# -- RBAC configuration.
 rbac:
   roles: {}
 
-# -- Redis configuration.
 redis:
   host: "redis-master.redis.svc.cluster.local"
   port: 6379
