ref: refactor the app to use app-template as primary chart

--- a/charts/lmcache/values.yaml
+++ b/charts/lmcache/values.yaml
@@ -13,7 +13,7 @@ controllers:
       main:
         image:
           repository: "lmcache/vllm-openai"
-          tag: "0.1.0" # Use semantic versioning for image tags (e.0.0)
+          tag: "0.1.0" 
           pullPolicy: IfNotPresent
 
         env:
