--- a/charts/lmcache/Chart.yaml
+++ b/charts/lmcache/Chart.yaml
@@ -2,18 +2,19 @@ annotations:
   artifacthub.io/changes: |-
     - kind: changed
       description: |-
-        Upgraded the common library to v4.3.0
+        Upgraded to use app-template instead of common library
       links:
         - name: Upgrade notes
           url: https://bjw-s-labs.github.io/helm-charts/docs/app-template/upgrade-instructions/
         - name: Detailed release notes
-          url: https://github.com/bjw-s-labs/helm-charts/releases/tag/common-4.3.0
+          url: https://github.com/bjw-s-labs/helm-charts/releases/tag/app-template-4.3.0
 apiVersion: v2
 dependencies:
-- name: common
+- name: app-template
+  version: "4.3.0"
+  alias: lmcache
   repository: https://bjw-s-labs.github.io/helm-charts
-  version: 4.3.0
-description: A common powered chart template. This can be useful for small projects
+description: A app-template powered chart. This can be useful for small projects
   that don't have their own chart.
 icon: https://techicons.dev/icons/helm/helm-icon.png
 kubeVersion: '>=1.28.0-0'
