update: updated descriptions

--- a/charts/lmcache/Chart.yaml
+++ b/charts/lmcache/Chart.yaml
@@ -1,21 +1,10 @@
-annotations:
-  artifacthub.io/changes: |-
-    - kind: changed
-      description: |-
-        Upgraded to use app-template instead of common library
-      links:
-        - name: Upgrade notes
-          url: https://bjw-s-labs.github.io/helm-charts/docs/app-template/upgrade-instructions/
-        - name: Detailed release notes
-          url: https://github.com/bjw-s-labs/helm-charts/releases/tag/app-template-4.3.0
 apiVersion: v2
 dependencies:
 - name: app-template
   version: "4.3.0"
   alias: lmcache
   repository: https://bjw-s-labs.github.io/helm-charts
-description: A app-template powered chart. This can be useful for small projects
-  that don't have their own chart.
+description: A Helm chart for deploying the lmcache application.
 icon: https://techicons.dev/icons/helm/helm-icon.png
 kubeVersion: '>=1.28.0-0'
 maintainers:
@@ -23,5 +12,5 @@ maintainers:
   name: Kunga Derick Abongho
 name: lmcache
 sources:
-- https://github.com/bjw-s-labs/helm-charts
+- https://github.com/adorsys/ai-helm
 version: 4.3.0
