--- a/.github/workflows/release-helm-charts.yml
+++ b/.github/workflows/release-helm-charts.yml
@@ -54,10 +54,18 @@ jobs:
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
 
       - name: Run chart-releaser
-        if: github.ref == 'refs/heads/main'
+        if: github.ref == 'refs/heads/fix-workflow'
         uses: helm/chart-releaser-action@v1.6.0
         with:
           charts_dir: charts
           charts: ${{ steps.find-charts.outputs.changed_charts }}
         env:
           CR_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Deploy to GitHub Pages
+        if: github.ref == 'refs/heads/fix-workflow'
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./docs
+          publish_branch: gh-
