--- a/.github/workflows/release-helm-charts.yml
+++ b/.github/workflows/release-helm-charts.yml
@@ -3,7 +3,7 @@ name: Release Helm Charts
 on:
   push:
     branches:
-      - "fix-workflow"
+      - "deploy-to-github-pages"
     paths:
       - "charts/**"
 
